inspirational-quotes-generator Version 1.0

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     <!-- ! SCRIPT -->
     <script src="script.js" async></script>
 </head>
-
-
+    
+<body>
+    
+  <div id="container">
+    <h1 id="heading">Inspirational Quote</h1>
+    <p id="quote">Press the button to generate quote!</p>
+    <button id="button">Generate</button>
+  </div>
 
   </body>
 </html>
